chore: 更新 Docker 部署说明
